<!--

    Copyright 2018 AnjLab

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

        http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.

-->
<resources>
    <string name="app_name">Bluetooth while Driving</string>

    <string name="pref_enabled_title">Enable Bluetooth switching while driving</string>
    <string name="pref_enabled_summary">App will detect your driving activity and turn on your Bluetooth for car kit connection</string>

    <string name="pref_doze_title">Disable battery optimization</string>
    <string name="pref_doze_summary">This will allow accurately detect driving activity even if your phone is in idle mode</string>

    <string name="pref_debug_title">Debug</string>
    <string name="pref_debug_summary">Notify currently running activity</string>

    <string name="notification_channel">Notifications</string>
    <string name="notification_title_error">Error</string>

    <string name="notification_title_enabled">Activity monitoring enabled</string>
    <string name="notification_msg_enable_failed">Failed to enable activity monitoring</string>
    <string name="notification_msg_enabled">Your Bluetooth will be enabled once you start driving</string>

    <string name="notification_title_disabled">Activity monitoring disabled</string>
    <string name="notification_msg_disable_failed">Failed to disable activity monitoring</string>
    <string name="notification_msg_disabled">Make sure you turn it on next time you drive</string>

    <string name="activity_confidence">Confidence</string>
    <string-array name="activity_kinds">
        <item>In Vehicle</item>
        <item>On Bicycle</item>
        <item>On Foot</item>
        <item>Still</item>
        <item>Unknown</item>
        <item>Tilting</item>
        <item>Walking</item>
        <item>Running</item>
    </string-array>
</resources>
