<!--

    Copyright 2018 AnjLab

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

        http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.

-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="false"
        android:key="enabled"
        android:summary="@string/pref_enabled_summary"
        android:title="@string/pref_enabled_title" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="doze_mode"
        android:title="@string/pref_doze_title"
        android:summary="@string/pref_doze_summary"/>

    <SwitchPreference
        android:defaultValue="false"
        android:key="debug"
        android:title="@string/pref_debug_title"
        android:summary="@string/pref_debug_summary"/>

</PreferenceScreen>
